# Langchain_update_projecct

./: .~lock.LangchainUpdate notes.odt#  LangchainUpdate notes.odt  main.py  pyproject.toml  requirement.txt
UpdatedLangchain/: 1-LangchainIntro.ipynb  2-modelintegration.ipynb  3-StreamingAndBatch.ipynb  4-Tools.ipynb  5-Messages.ipynb  5-StructuredOuput.ipynb  6-StructuredOuput.ipynb  7-MiddleWare.ipynb
